--- a/martedì---2907--yogykarta---tempio-pranbanan-.html
+++ b/martedì---2907--yogykarta---tempio-pranbanan-.html
@@ -12,7 +12,7 @@
 <body class="bg-gray-100 font-sans p-4">
 <a href="index.html" class="text-blue-500 underline mb-4 block">← Torna all'indice</a>
 <h1 class="text-2xl font-bold text-blue-700 mb-2">Martedì - 29/07 – Yogykarta - Tempio Pranbanan 🕌</h1>
-<h2 class="text-lg text-gray-600 mb-4">Indonesia - Yogyakarta🕉️</h2>
+<h2 class="text-lg text-gray-600 mb-4">Indonesia🕉️</h2>
 
 <script>
   if ('serviceWorker' in navigator) {
@@ -44,7 +44,7 @@
     Vai all'album su Google Foto
   </a>
 </div>
-<div class='mt-10 flex justify-between'><a href='lunedi---2807--yogykarta.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='mercoledì---3007--yogykarta---tempio-borobodur-.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
+<div class='mt-10 flex justify-between'><a href='lunedi---2807--jakarta---yogykarta.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='mercoledì---3007--yogykarta---tempio-borobodur-.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
 <div class="mt-10">
   <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
   <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
