--- a/mercoledì---3007--yogykarta---tempio-borobodur-.html
+++ b/mercoledì---3007--yogykarta---tempio-borobodur-.html
@@ -12,7 +12,7 @@
 <body class="bg-gray-100 font-sans p-4">
 <a href="index.html" class="text-blue-500 underline mb-4 block">← Torna all'indice</a>
 <h1 class="text-2xl font-bold text-blue-700 mb-2">Mercoledì - 30/07 – Yogykarta - Tempio Borobodur 🕌</h1>
-<h2 class="text-lg text-gray-600 mb-4">Indonesia - Yogyakarta🕉️</h2>
+<h2 class="text-lg text-gray-600 mb-4">Indonesia🕉️</h2>
 
 <script>
   if ('serviceWorker' in navigator) {
