--- a/sabato---2607--jeddah---singapore.html
+++ b/sabato---2607--jeddah---singapore.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Venerdi - 25/07 – Scoperta di Gedda</title>
+  <title>Sabato - 26/07 – Jeddah - Singapore✈️</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/png" href="static/icon.png">
@@ -11,8 +11,8 @@
 </head>
 <body class="bg-gray-100 font-sans p-4">
 <a href="index.html" class="text-blue-500 underline mb-4 block">← Torna all'indice</a>
-<h1 class="text-2xl font-bold text-blue-700 mb-2">Venerdi - 25/07 – Scoperta di Gedda</h1>
-<h2 class="text-lg text-gray-600 mb-4">Arabia Saudita (Gedda)🇲🇴</h2>
+<h1 class="text-2xl font-bold text-blue-700 mb-2">Sabato - 26/07 – Jeddah - Singapore✈️</h1>
+<h2 class="text-lg text-gray-600 mb-4">Indonesia🕉️</h2>
 
 <script>
   if ('serviceWorker' in navigator) {
@@ -25,7 +25,7 @@
       });
   }
 </script>
-<img src='static/jedda.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>📸 Attività</p><p class='text-base font-semibold text-gray-800 mt-1'>Visite libere</p><p class='text-sm mb-1'>🇲🇴🏝️</p></div>
+<img src='static/volo.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Volo verso Singapore</p><p class='text-sm mb-1'>Scoot - N.Volo: TR597 - 21:50 - 12:35(+1) - Durata volo 9h45' - Scalo 3h40'</p></div>
 <div class='bg-pink-50 border border-pink-200 p-4 rounded-xl shadow mt-10'>
   <h3 class='text-lg font-semibold text-pink-800 mb-1'>📸 Album fotografico del viaggio</h3>
   <p class='text-sm mb-2'>Guarda o carica le foto del viaggio qui sotto:</p>
@@ -34,7 +34,7 @@
     Vai all'album su Google Foto
   </a>
 </div>
-<div class='mt-10 flex justify-between'><a href='giovedi---2407--scoperta-di-gedda.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='sabato---2607--jeddah---singapore.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
+<div class='mt-10 flex justify-between'><a href='venerdi---2507--scoperta-di-gedda.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='domenica---2707--singapore---jakarta.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
 <div class="mt-10">
   <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
   <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
