--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body class="bg-gray-100 font-sans p-4">
 <h1 class="text-3xl font-bold mb-6">📍 Itinerario di Viaggio</h1>
+<div class="mb-6">
+  <img src="static/noi.jpg" alt="Foto di noi due" class="rounded-2xl shadow-lg w-full max-w-xs mx-auto">
+</div>
 
 <script>
   if ('serviceWorker' in navigator) {
