--- a/domenica-lunedi-martedi---3-508--pemuteran.html
+++ b/domenica-lunedi-martedi---3-508--pemuteran.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sabato 2/08 – Banyuwangi - Pemuteran🏝️</title>
+  <title>Domenica, Lunedi, Martedi - 3-5/08 – Pemuteran🏝️</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/png" href="static/icon.png">
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-gray-100 font-sans p-4">
 <a href="index.html" class="text-blue-500 underline mb-4 block">← Torna all'indice</a>
-<h1 class="text-2xl font-bold text-blue-700 mb-2">Sabato 2/08 – Banyuwangi - Pemuteran🏝️</h1>
+<h1 class="text-2xl font-bold text-blue-700 mb-2">Domenica, Lunedi, Martedi - 3-5/08 – Pemuteran🏝️</h1>
 <h2 class="text-lg text-gray-600 mb-4">Indonesia - Bali🌸</h2>
 
 <script>
@@ -25,17 +25,7 @@
       });
   }
 </script>
-<img src='static/pemuteran.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>DALL'ALBERGO A KETAPANG-GILIMANUK (PORTO)</p><p class='text-sm mb-1'>TAXI/GRAB fino al porto - durata tragitto 29 minuti(14 km) - POSIZIONE NEL LINK</p>
-<details class='text-sm mt-2'>
-  <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <a href="https://maps.app.goo.gl/A5Hft3gnpmLDnrQ36?g_st=com.google.maps.preview.copy" target="_blank" class="text-blue-600 underline break-words">https://maps.app.goo.gl/A5Hft3gnpmLDnrQ36?g_st=com.google.maps.preview.copy</a>
-</details>
-</div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Traghetto da Ketapang a Gilimanuk (al mattino dopo l'escursione al vulcano)</p><p class='text-sm mb-1'>Traghetto da Ketapang a Gilimanuk - Durata viaggio 45' -  partenza ogni ora</p>
-<details class='text-sm mt-2'>
-  <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <a href="https://en.tiket.com/ferry" target="_blank" class="text-blue-600 underline break-words">https://en.tiket.com/ferry</a>
-</details>
-</div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Da Gilimanuk a Pemuteran</p><p class='text-sm mb-1'>Taxi/van 45 minuti - Arrivo a Pemuteran nel pomeriggio</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🛏️ Pernottamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>H6 - Mango Moon (4 notti - 2-3 / 3-4 / 4-5 / 5-6) - Check in dalle 12:00</p><p class='text-sm mb-1'>Jl. Singaraja - Gilimanuk, Pemuteran - Buleleng, 81155 Pemuteran, Indonesia - COLAZIONE INCLUSA</p>
+<img src='static/pemuteran.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>📸 Attività</p><p class='text-base font-semibold text-gray-800 mt-1'>Spiagge e snorkeling</p><p class='text-sm mb-1'>Pemuteran Beach - White Sand Beach - Snorkeling Biorock Pemuteran</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🛏️ Pernottamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>H6 - Mango Moon (4 notti - 2-3 / 3-4 / 4-5 / 5-6) - Check in dalle 12:00</p><p class='text-sm mb-1'>Jl. Singaraja - Gilimanuk, Pemuteran - Buleleng, 81155 Pemuteran, Indonesia - COLAZIONE INCLUSA</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
   <a href="https://www.booking.com/hotel/id/mango-moon.it.html?label=it-fr-booking-desktop-ZjOK8gyoE3cnhKZSd8fqmgS652828999648%253Apl%253Ata%253Ap1%253Ap2%253Aac%253Aap%253Aneg%253Afi%253Atikwd-65526620%253Alp1006094%253Ali%253Adec%253Adm&sid=78f0340a13f2da4a5cd345993fe9c31c&aid=2311236&ucfs=1&checkin=2025-08-02&checkout=2025-08-06&dest_id=900048175&dest_type=city&group_adults=2&no_rooms=1&group_children=0&nflt=review_score%3D80%3Broomfacility%3D38%3Bfc%3D2%3Bmealplan%3D1&srpvid=15c57f7d968b0061&srepoch=1746900923&matching_block_id=139643002_122567517_2_1_0&atlas_src=sr_iw_title#tab-main" target="_blank" class="text-blue-600 underline break-words">https://www.booking.com/hotel/id/mango-moon.it.html?label=it-fr-booking-desktop-ZjOK8gyoE3cnhKZSd8fqmgS652828999648%253Apl%253Ata%253Ap1%253Ap2%253Aac%253Aap%253Aneg%253Afi%253Atikwd-65526620%253Alp1006094%253Ali%253Adec%253Adm&sid=78f0340a13f2da4a5cd345993fe9c31c&aid=2311236&ucfs=1&checkin=2025-08-02&checkout=2025-08-06&dest_id=900048175&dest_type=city&group_adults=2&no_rooms=1&group_children=0&nflt=review_score%3D80%3Broomfacility%3D38%3Bfc%3D2%3Bmealplan%3D1&srpvid=15c57f7d968b0061&srepoch=1746900923&matching_block_id=139643002_122567517_2_1_0&atlas_src=sr_iw_title#tab-main</a>
@@ -54,7 +44,7 @@
     Vai all'album su Google Foto
   </a>
 </div>
-<div class='mt-10 flex justify-between'><a href='venerdi---0108--direzione-vulcano-kawah-ijen.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='domenica-lunedi-martedi---3-508--pemuteran.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
+<div class='mt-10 flex justify-between'><a href='sabato-208--banyuwangi---pemuteran.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='mercoledi-608--pemuteran---ubud.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
 <div class="mt-10">
   <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
   <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
