--- a/venerdi---808--ubud.html
+++ b/venerdi---808--ubud.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sabato - 9/08 – Ubud🐒</title>
+  <title>Venerdi - 8/08 – Ubud🐒</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/png" href="static/icon.png">
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-gray-100 font-sans p-4">
 <a href="index.html" class="text-blue-500 underline mb-4 block">← Torna all'indice</a>
-<h1 class="text-2xl font-bold text-blue-700 mb-2">Sabato - 9/08 – Ubud🐒</h1>
+<h1 class="text-2xl font-bold text-blue-700 mb-2">Venerdi - 8/08 – Ubud🐒</h1>
 <h2 class="text-lg text-gray-600 mb-4">Indonesia - Ubud🐒</h2>
 
 <script>
@@ -25,10 +25,10 @@
       });
   }
 </script>
-<img src='static/ubud.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>📸 Attività</p><p class='text-base font-semibold text-gray-800 mt-1'>Masssaggi balinesi, relax e rito di purificazione</p><p class='text-sm mb-1'>Relax - massagi/rito di purificazione.</p>
+<img src='static/ubud.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>📸 Attività</p><p class='text-base font-semibold text-gray-800 mt-1'>Villaggio di Penglipuran</p><p class='text-sm mb-1'>Visita al Villaggio di Penglipuran (1h di grabb da Ubud)</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <a href="https://www.tripadvisor.it/AttractionProductReview-g297701-d20432201-Bali_Shaman_Palm_Reading_Spiritual-Ubud_Gianyar_Regency_Bali.html" target="_blank" class="text-blue-600 underline break-words">https://www.tripadvisor.it/AttractionProductReview-g297701-d20432201-Bali_Shaman_Palm_Reading_Spiritual-Ubud_Gianyar_Regency_Bali.html</a>
+  <a href="https://viaggioinindonesia.com/il-villaggio-di-penglipuran-a-bali/" target="_blank" class="text-blue-600 underline break-words">https://viaggioinindonesia.com/il-villaggio-di-penglipuran-a-bali/</a>
 </details>
 </div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🛏️ Pernottamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>H7 - Merthayasa Bungalow 2 (4 notti -  6-7 / 7-8 / 8-9 / 9-10) - Check in dalle 14:00 alle 23:00</p><p class='text-sm mb-1'>Jalan Hanoman, Gang Anila No. 23, 80571 Ubud, Indonesia - COLAZIONE INCLUSA</p>
 <details class='text-sm mt-2'>
@@ -49,7 +49,7 @@
     Vai all'album su Google Foto
   </a>
 </div>
-<div class='mt-10 flex justify-between'><a href='venerdi---808--ubud.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='domenica---1008--ubud---komodo.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
+<div class='mt-10 flex justify-between'><a href='giovedi---708--ubud.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='sabato---908--ubud.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
 <div class="mt-10">
   <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
   <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
